[tool.poetry]
name = "package-b"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "package_a"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
websockets = "^10.4"
sanic = "^22.12.0"
antigravity = "^0.1"
fuzzywuzzy = "^0.18.0"
nvidia-cuda-runtime-cu11 = "^11.8.89"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
